--- a/style/app.css
+++ b/style/app.css
@@ -2,8 +2,6 @@
 
 .grid-structure {
     display: grid;
-    /* grid-gap: 10px; */
-    /* padding: 70px 0rem 0rem 0rem; */
     grid-template-columns: 250px 1fr;
     grid-template-rows: 1fr auto;
 }
@@ -25,15 +23,12 @@ aside nav {
 }
 
 main {
-    /* grid-area: main;
-    width: auto; */
     padding-right: 3rem;
     background-color: #f5f5f5;
     min-height: 850px;
 }
 
 .stoogecss {
-    /* grid-area: intro; */
     background-image: linear-gradient(to bottom right, #2979ff, #7949cc);
 }
 
@@ -100,7 +95,6 @@ footer p {
 }
 
 .dropbtn {
-  /* position: relative; */
   background-color: #fff;
   margin: 0;
   color: #fff;
@@ -119,7 +113,6 @@ footer p {
     position: relative;
     display: block;
     left: 100%;
-    /* top: -100%; */
     padding: 0;
     top: -50px;
     width: 20px;
@@ -152,14 +145,9 @@ footer p {
   display: block;
 }
 
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd;}
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
 
 
 @media screen and (max-width:770px) {
@@ -230,9 +218,7 @@ footer p {
 }
 
 .main__section thead td {
-    background-color: #2962ff;
     background-color: #5992ff;
-    /* text-align: center; */
 }
 
 .main__section thead td {
@@ -240,11 +226,7 @@ footer p {
     color: #ffffff;
 }
 
-table tbody td:nth-of-type(2) {
-    background: #00e676;
-}
-
-table tbody td:nth-of-type(4) {
+table tbody td:nth-of-type(2), table tbody td:nth-of-type(4) {
     background: #00e676;
 }
 
@@ -270,11 +252,7 @@ table tr td.special-case {
     width: 50%;
 }
 
-.main__section table.components td:nth-of-type(2) {
-    width: 25%;
-}
-
-.main__section table.components td:nth-of-type(3) {
+.main__section table.components td:nth-of-type(2), .main__section table.components td:nth-of-type(3) {
     width: 25%;
 }
 
