--- a/style/app.css
+++ b/style/app.css
@@ -322,9 +322,24 @@ table tr td.special-case {
   .main__section td, .main__section tr {
       font-size: 0.8rem;
   }
-  table {
-      margin-left: -30px;
+
+  .main__section table.components td:nth-of-type(1) {
+    width: 50%;
   }
+  .main__section table.components td:nth-of-type(2) {
+    width: 25%;
+  }
+  .main__section table.components td:nth-of-type(3) {
+    width: 20%;
+  }
+  .main__section table.components td:nth-of-type(1) {
+    width: 50%;
+  }
+  .main__section table.components td:nth-of-type(2) {
+    width: 40%;
+  }
+
+
 }
 
 .container-inner {
