--- a/style/app.css
+++ b/style/app.css
@@ -338,7 +338,7 @@ table tr td.special-case {
   .main__section table.components td:nth-of-type(2) {
     width: 40%;
   }
-  .main__section table.fivecol td:nth-of-type(1) {
+  .main__section table.fivecol td:nth-of-type(1), .main__section table.fivecol td:nth-of-type(3) {
     width: 18%;
   }
   .main__section table.fivecol td:nth-of-type(2), .main__section table.fivecol td:nth-of-type(4), .main__section table.fivecol td:nth-of-type(5) {
